crates/strider-analyze/tests/snapshots/v3__arm_be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "12" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ d1", shape=house, fillcolor="#163030"];
  "12" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x10114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "37" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="φ d0", shape=house, fillcolor="#163030"];
  "12" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v44" [color="#888888", style=dashed];
  "v44" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v45" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v45" [color="#888888", style=dashed];
  "v45" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ r1", shape=house, fillcolor="#163030"];
  "12" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v46" [color="#888888", style=dashed];
  "v46" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v47" [color="#888888", style=dashed];
  "v47" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ Val", shape=house, fillcolor="#163030"];
  "12" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "48" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v50" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v50" [color="#888888", style=dashed];
  "v50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v52" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v52" [color="#888888", style=dashed];
  "v52" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="φ Mem", shape=house, fillcolor="#163030"];
  "12" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "54" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "56" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "58" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v50" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "13" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v50" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "61" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "63" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v52" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "5" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v52" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
